# senzing-with-chatgpt-plugin

./: .gitignore  .project  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
.well-known/: ai-plugin.json  openapi.yaml
docs/: README.md  development.md  errors.md  examples.md
server/: main.py  openapi_schema.py  senzing_api.py
tests/server/: constants.py  test_main.py  test_openapi_schema.py  test_senzing_api.py
var/sqlite/: G2C.db
